--- a/Documentation/Settings.cfg
+++ b/Documentation/Settings.cfg
@@ -22,7 +22,7 @@
 # .................................................................................
 
 # MATCH EM_CONF
-project     = VUE.JS Framework for TYPO3 Backend Modules
+project     = Vue.js Framework for TYPO3 Backend Modules
 
 # .................................................................................
 # ...   (recommended) version, displayed next to title (desktop) and in <meta name="book-version"
