Add TYPO3 ^9.5 requirement

--- a/composer.json
+++ b/composer.json
@@ -45,6 +45,9 @@
     "typo3/cms-about": "^9.5",
     "typo3/testing-framework": "^4.11.0"
   },
+  "require": {
+    "typo3/cms-core": "^9.5"
+  },
   "scripts": {
     "post-autoload-dump": [
       "TYPO3\\TestingFramework\\Composer\\ExtensionTestEnvironment::prepare"
