--- a/composer.json
+++ b/composer.json
@@ -46,7 +46,7 @@
     "typo3/testing-framework": "^4.11.0"
   },
   "require": {
-    "typo3/cms-core": "^9.5"
+    "typo3/cms-core": "^9.5 || ^10"
   },
   "scripts": {
     "post-autoload-dump": [
