--- a/Documentation/Settings.cfg
+++ b/Documentation/Settings.cfg
@@ -22,7 +22,7 @@
 # .................................................................................
 
 # MATCH EM_CONF
-project     = Vue.js Framework for TYPO3 Backend Modules
+project     = vuejs
 
 # .................................................................................
 # ...   (recommended) version, displayed next to title (desktop) and in <meta name="book-version"
@@ -54,7 +54,7 @@ github_repository    = zotornit/t3x-vuejs
 # .................................................................................
 
 # usually an email address
-project_contact      = mailto:info@zotorn.de
+project_contact      = mailto:tp@zotorn.de
 
 # URL of online discussions, you can leave this blank
 project_discussions  =
