--- a/composer.json
+++ b/composer.json
@@ -43,7 +43,8 @@
     "typo3/cms-frontend": "^9.5",
     "typo3/cms-install": "^9.5",
     "typo3/cms-about": "^9.5",
-    "typo3/testing-framework": "^4.11.0"
+    "typo3/testing-framework": "^4.11.0",
+    "typo3/tailor": ""
   },
   "require": {
     "typo3/cms-core": "^9.5 || ^10.4"
@@ -51,6 +52,14 @@
   "scripts": {
     "post-autoload-dump": [
       "TYPO3\\TestingFramework\\Composer\\ExtensionTestEnvironment::prepare"
+    ],
+    "prepare-release": [
+      "@extension-create-libs",
+      "rm -rf .devbox",
+      "rm -rf Tests/",
+      "rm .gitignore",
+      "rm .scrutinizer.yml",
+      "rm disabled.travis.yml"
     ]
   },
   "extra": {
